manifests/code-breakers/code-breakers.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: code-breakers
    stack: frontend
  name: code-breakers
  namespace: default
spec:
  selector:
    source: demo
    app: code-breakers
  ports:
    -   name: web
        protocol: TCP
        port: 30201
        targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    stack: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /code-breakers$1$2
  name: code-breakers-ingress
  namespace: default
spec:
  rules:
    -   http:
          paths:
            -   path: /code-breakers(/|$)(.*)
                pathType: Prefix
                backend:
                  service:
                    name: code-breakers
                    port:
                      number: 30201
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: code-breakers
    stack: frontend
    source: demo
  name: code-breakers
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: code-breakers
  template:
    metadata:
      labels:
        app: code-breakers
        run: code-breakers
        source: demo
      namespace: default
    spec:
      containers:
        -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/code-breakers
            name: code-breakers
            ports:
              -   name: web
                  containerPort: 9000
